fix: 修复搜索位置反序列化错误